# Abgaben

./: .gitignore  README.md  Untitled  load_data.py  main.py  power_curve.py  pyproject.toml  sort.py  test.txt
src/: main.py  power_curve.py  read_data.py
