[project]
name = "Abgabe-2"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Franzi-Bernecker", email = "bf8127@mci4me.at"},
]
dependencies = [
    "pandas>=3.0.3",
    "numpy>=2.4.6",
    "streamlit>=1.57.0",
    "plotly>=6.7.0",
]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
