[project]
name = "Abgabe-3"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "laurenzkeller05", email = "laurenz.keller05@gmail.com"},
]
dependencies = ["numpy>=2.4.6", "pandas>=3.0.3", "plotly>=6.7.0", "kaleido>=1.3.0"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
